<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/instruction" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/step1"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/step2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/step3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/measure"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:strokeColor="@color/colorPrimary"
        app:icon="@drawable/ic_cardiogram"
        app:iconTint="@color/colorPrimary" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:text="63bpm"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@+id/btnMeasure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</LinearLayout>